booklore/Deployment-booklore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: booklore
  name: booklore
  namespace: media
spec:
  minReadySeconds: 10
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: booklore
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: booklore
    spec:
      containers:
      - env:
        - name: BOOKLORE_PORT
          valueFrom:
            configMapKeyRef:
              key: BOOKLORE_PORT
              name: booklore-config-env
        - name: DATABASE_URL
          valueFrom:
            configMapKeyRef:
              key: DATABASE_URL
              name: booklore-config-env
        - name: DATABASE_USERNAME
          valueFrom:
            configMapKeyRef:
              key: DATABASE_USERNAME
              name: booklore-config-env
        - name: GROUP_ID
          valueFrom:
            configMapKeyRef:
              key: GROUP_ID
              name: booklore-config-env
        - name: LOGGING_CONFIG
          valueFrom:
            configMapKeyRef:
              key: LOGGING_CONFIG
              name: booklore-config-env
        - name: SPRINGDOC_API_DOCS_ENABLED
          valueFrom:
            configMapKeyRef:
              key: SPRINGDOC_API_DOCS_ENABLED
              name: booklore-config-env
        - name: SPRINGDOC_SWAGGER_UI_ENABLED
          valueFrom:
            configMapKeyRef:
              key: SPRINGDOC_SWAGGER_UI_ENABLED
              name: booklore-config-env
        - name: TZ
          valueFrom:
            configMapKeyRef:
              key: TZ
              name: booklore-config-env
        - name: USER_ID
          valueFrom:
            configMapKeyRef:
              key: USER_ID
              name: booklore-config-env
        - name: DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DATABASE_PASSWORD
              name: booklore-shared-sealed-secret
        image: booklore/booklore:v2.2.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/healthcheck
            port: 6060
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: booklore
        ports:
        - containerPort: 6060
          name: server
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/healthcheck
            port: 6060
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /api/v1/healthcheck
            port: 6060
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /app/data
          name: data
        - mountPath: /books
          name: books
        - mountPath: /bookdrop
          name: bookdrop
        - mountPath: /config/logback-spring.xml
          name: logback-spring-xml
          subPath: logback-spring.xml
      volumes:
      - hostPath:
          path: /cold-data/booklore/data
        name: data
      - hostPath:
          path: /cold-data/booklore/books
        name: books
      - hostPath:
          path: /cold-data/booklore/bookdrop
        name: bookdrop
      - configMap:
          name: logback-spring-xml
        name: logback-spring-xml
