booklore/Service-booklore.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: booklore
    name: booklore
  name: booklore
  namespace: media
spec:
  ports:
  - name: booklore-server
    port: 6060
    targetPort: 6060
  selector:
    name: booklore
